Fix to dodgy scrollbars.

--- a/site.css
+++ b/site.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  margin: 0; padding: 0;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -8,6 +9,7 @@ html {
 body {
   width: 100%;
   height: 100%;
+  margin: 0;
   overflow: auto;
   background-image:
     linear-gradient(133deg, white, white, #fff6d5);
